objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Numb__c</fullName>
        <label>Phone Numb</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Trainee</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>